<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="267dp"
        android:layout_height="70dp"
        android:layout_marginTop="108dp"
        android:gravity="center"
        android:text="@string/title"
        android:textColor="#673AB7"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnViewPager"
        android:layout_width="267dp"
        android:layout_height="59dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="72dp"
        android:text="@string/btnViewPage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btnFromAsset"
        android:layout_width="268dp"
        android:layout_height="65dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="71dp"
        android:text="@string/btnFromAsset"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnViewPager" />

    <Button
        android:id="@+id/btnFromStorage"
        android:layout_width="265dp"
        android:layout_height="62dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="74dp"
        android:text="@string/btnFromStorage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFromAsset" />

    <Button
        android:id="@+id/btnFromInternet"
        android:layout_width="263dp"
        android:layout_height="54dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="76dp"
        android:text="@string/btnFromInternet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFromStorage" />

    <Button
        android:id="@+id/btnPdfRender"
        android:layout_width="263dp"
        android:layout_height="54dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="78dp"
        android:text="@string/btnPdfRender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnFromInternet" />

</androidx.constraintlayout.widget.ConstraintLayout>